css/style.css
/* ... */
#saveEvent,
#acceptInvite {
  background-color: #166914;
  color: white;
  margin-right: 4%;
}

#cancelEvent,
#declineinvite {
  background-color: #e0e0e0;
  color: #333;
}

#saveEvent:hover,
#cancelEvent:hover {
  opacity: 0.8;
}

/* ************************************* ACCOUNT STYLES ************************************* */
/* ************************************* ACCOUNT STYLES ************************************* */

.account-body {
  background-color: #BDC29D;
  /* width: 80%; */
  /* margin: 0 auto; */
}

.account-main-container {
  border-radius: 2rem;
  padding: 1rem 0 3rem 3rem;
  width: 80%;
  margin: 0 auto;

  /* glassmorphism */
  background: rgba(255, 255, 255, 0.2);

  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);

  border: 1px solid rgba(255, 255, 255, 0.3);

  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);

  transition: transform 0.3s ease-in-out;

}

.account-settings {
  border: 3px solid orange;
  width: 70%;
  margin: 0 auto;

  font-family: sans-serif;

  border-radius: 2rem;
  padding: 1rem 0 3rem 3rem;

  /* glassmorphism */
  background: rgba(255, 255, 255, 0.2);

  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);

  border: 1px solid rgba(255, 255, 255, 0.3);

  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);

  transition: transform 0.3s ease-in-out;

  display: flex;
  flex-direction: column;
}

.account-username {
  margin-bottom: 2rem;
  display: flex;
  flex-direction: column;
  width: 30%;
  color: #153853;
  font-weight: bold;
  font-size: var(--text-size-lg);

}

.username-input {
  padding: 1rem;
  border-radius: 2rem;
  margin-top: .5rem;

  /* glassmorphism */
  background: rgba(255, 255, 255, 0.2);

  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);

  border: 1px solid rgba(255, 255, 255, 0.3);

  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);

  transition: transform 0.3s ease-in-out;
  color: #153853;
  font-size: var(--text-size-md);

}


/* ************************************* SHARE STYLES ************************************* */
/* ************************************* SHARE STYLES ************************************* */
.share-body {
  background-color: #BDC29D;
}

/* ************************************* CREATE FORM STYLES ************************************* */
/* ************************************* CREATE FORM STYLES ************************************* */

.create-body {
  background-color: #BDC29D;
}

.create-module-main {
  width: 80%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 4px solid yellow;

  border-radius: 2rem;
  padding: 1rem 0 3rem 3rem;

  /* glassmorphism */
  background: rgba(255, 255, 255, 0.2);

  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);

  border: 1px solid rgba(255, 255, 255, 0.3);

  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);

  transition: transform 0.3s ease-in-out;
}

.create-module-main:hover {
  /* transform: scale(1.05); */
}

.create-module-main h2 {
  font-size: var(--text-size-2xl);
  color: #f1f2f5;
  /* margin-bottom: 2rem; */
}

/* ************************************* BEGIN MODULE STYLES ************************************* */
/* ************************************* BEGIN MODULE STYLES ************************************* */

.begin-module-body {
  background-color: #BDC29D;

}

.begin-module-container {
  border-radius: 2rem;
  padding: 1rem 0 3rem 3rem;

  margin: 0 auto;
  width: 80%;

  height: 650px;

  /* glassmorphism */
  background: rgba(255, 255, 255, 0.2);

  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);

  border: 1px solid rgba(255, 255, 255, 0.3);

  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);

  transition: transform 0.3s ease-in-out;

}

/* ************************************* PROFILE STYLES ************************************* */
/* ************************************* PROFILE STYLES ************************************* */

.profile-body {
  background-color: #BDC29D;
}

.profile-container {
  border-radius: 2rem;
  padding: 1rem 0 3rem 3rem;

  margin: 0 auto;
  width: 80%;

  /* glassmorphism */
  background: rgba(255, 255, 255, 0.2);

  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);

  border: 1px solid rgba(255, 255, 255, 0.3);

  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);

  transition: transform 0.3s ease-in-out;

}


/* ************************************* CREATE CIRCLE STYLES ************************************* */
/* ************************************* CREATE CIRCLE STYLES ************************************* */

.create-circle-body {
  background-color: #BDC29D;
}

.create-circle-main-container {
  border-radius: 2rem;
  padding: 1rem 0 3rem 3rem;
  width: 80%;
  margin: 0 auto;

  /* glassmorphism */
  background: rgba(255, 255, 255, 0.2);

  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);

  border: 1px solid rgba(255, 255, 255, 0.3);

  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);

  transition: transform 0.3s ease-in-out;
}

